{
  "version": 4,
  "terraform_version": "1.7.0",
  "serial": 35,
  "lineage": "461e2d88-c89e-905b-e562-3d9cdecc1f0d",
  "resources": [
    {
      "module": "module.LB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:533267337200:targetgroup/nginx-mongodb-cluster-alb-tg/491839a3677ebf50",
            "arn_suffix": "targetgroup/nginx-mongodb-cluster-alb-tg/491839a3677ebf50",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 300,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:533267337200:targetgroup/nginx-mongodb-cluster-alb-tg/491839a3677ebf50",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-mongodb-cluster-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ccaa417e7fd489cb"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267337200:security-group/sg-080537327a782bf7f",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080537327a782bf7f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "533267337200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB-SG"
            },
            "tags_all": {
              "Name": "ALB-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccaa417e7fd489cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control-machine",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267337200:security-group/sg-0c5831d93ff2acbdc",
            "description": "control-machine security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5831d93ff2acbdc",
            "ingress": [],
            "name": "control-machine",
            "name_prefix": "",
            "owner_id": "533267337200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "control-machine-sg"
            },
            "tags_all": {
              "Name": "control-machine-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccaa417e7fd489cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.SG",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267337200:security-group/sg-0f768ec6e4aa5e52e",
            "description": "enable http from ALB-sg on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f768ec6e4aa5e52e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "allow control-machine",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c5831d93ff2acbdc"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-080537327a782bf7f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-ec2-sg",
            "name_prefix": "",
            "owner_id": "533267337200",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nginx-EC2-sg"
            },
            "tags_all": {
              "Name": "Nginx-EC2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ccaa417e7fd489cb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.SG.aws_security_group.alb_sg",
            "module.SG.aws_security_group.control-machine",
            "module.VPC.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub-4-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267337200:subnet/subnet-02ceeeae0827b8282",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ceeeae0827b8282",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267337200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-4-a"
            },
            "tags_all": {
              "Name": "pri-sub-4-a"
            },
            "vpc_id": "vpc-0ccaa417e7fd489cb"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub-5-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267337200:subnet/subnet-06dbd893e2540fbb5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.20.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06dbd893e2540fbb5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267337200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-5-b"
            },
            "tags_all": {
              "Name": "pri-sub-5-b"
            },
            "vpc_id": "vpc-0ccaa417e7fd489cb"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri-sub-6-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267337200:subnet/subnet-0bee832da26a56450",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bee832da26a56450",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267337200",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri-sub-6-c"
            },
            "tags_all": {
              "Name": "pri-sub-6-c"
            },
            "vpc_id": "vpc-0ccaa417e7fd489cb"
          },
          "dependencies": [
            "module.VPC.aws_vpc.vpc",
            "module.VPC.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:533267337200:vpc/vpc-0ccaa417e7fd489cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0c5611745ba317e21",
            "default_route_table_id": "rtb-0d088c692548c6167",
            "default_security_group_id": "sg-0fcbba3c034a8038e",
            "dhcp_options_id": "dopt-0ee3860d860266882",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ccaa417e7fd489cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d088c692548c6167",
            "owner_id": "533267337200",
            "tags": {
              "Name": "nginx-mongodb-cluster-vpc"
            },
            "tags_all": {
              "Name": "nginx-mongodb-cluster-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}